Messing with examples from w3

--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ body {
   position: sticky;
   bottom: 20vw;
   right: 15vw;
-
 }
 
 #slogan {
@@ -56,6 +55,33 @@ p {
   right: 3%;
 }
 
+/* Main column */
+.main {
+  -ms-flex: 70%; /* IE10 */
+  flex: 70%;
+  background-color: white;
+  padding: 20px;
+}
+
+
+/* Column container */
+.row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+}
+
+
+
+/* Footer */
+.footer {
+  padding: 20px;
+  text-align: center;
+  background: #ddd;
+}
+
+
 @media only screen and (max-width:620px) {
   /* For mobile phones: */
  .sideNav, #slogan {
@@ -63,6 +89,11 @@ p {
   }
 
  @media only screen and (max-width:620px  ) {
+   .row {
+   flex-direction: column;
+ }
+
+
   /* For mobile phones: */
    #theGoodButton, #theBadButton, #rickRoll{
   	display: block;
