--- a/style.css
+++ b/style.css
@@ -1,69 +1,62 @@
-
 * {
-  box-sizing:border-box;
+  box-sizing: border-box;
 }
 
-body {
-  background-color: #E9FFE1;
-}
-
+/* Header/logo Title */
 .header {
-  position: fixed;
-  top: 0;
   padding: 80px;
   text-align: center;
   background: #1abc9c;
   color: white;
 }
 
-#theGoodButton, #theBadButton, #rickRoll {
-	background-color: #9BEE60;
-	padding: 10px 10px;
-	border-radius: 34vw;
-	width: 95%;
-	font-style: italic;
-	font-family: 'Courgette';
-	font-size: 90%;
+/* Increase the font size of the heading */
+.header h1 {
+  font-size: 40px;
 }
 
-#ephemeralClock {
-  position: fixed;
-  bottom: 20vw;
-  right: 15vw;
+/* Style the top navigation bar */
+.navbar {
+  overflow: hidden;
+  background-color: #333;
 }
 
-#slogan {
-
-  font-family: 'Courgette';
-  font-size: 4.5vw;
+/* Style the navigation bar links */
+.navbar a {
+  float: left;
+  display: block;
+  color: white;
   text-align: center;
-  width: 65%;
-  bottom: 6vw;
-  right: 16vw;
+  padding: 14px 20px;
+  text-decoration: none;
 }
 
-p {
-
-	font-family: 'Crimson Text', serif;
-	font-size: 120%;
+/* Right-aligned link */
+.navbar a.right {
+  float: right;
 }
 
-#theGoodButton:hover, #theBadButton:hover, #rickRoll:hover {
-	background-color: #6DB93A;
-	box-shadow: 7px 8px  rgba(0,0,0,0.15),
-	0 10px 14px 0 rgba(0,0,0,0.19);
-
+/* Change color on hover */
+.navbar a:hover {
+  background-color: #ddd;
+  color: black;
 }
 
+/* Column container */
+.row {
+  display: -ms-flexbox; /* IE10 */
+  display: flex;
+  -ms-flex-wrap: wrap; /* IE10 */
+  flex-wrap: wrap;
+}
 
-.sideNav {
-  float:right;
-  width:15%;
-  display:block;
-  padding:10px;
-  text-align:right;
-  bottom: 37%;
-  right: 3%;
+/* Create two unequal columns that sits next to each other */
+/* Sidebar/left column */
+.side {
+  -ms-flex: 30%; /* IE10 */
+  flex: 30%;
+  background-color: #f1f1f1;
+  padding: 20px;
 }
 
 /* Main column */
@@ -74,54 +67,31 @@ p {
   padding: 20px;
 }
 
-
-/* Column container */
-.row {
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
+/* Fake image, just for this example */
+.fakeimg {
+  background-color: #aaa;
+  width: 100%;
+  padding: 20px;
 }
-
-
 
 /* Footer */
 .footer {
   padding: 20px;
   text-align: center;
-  background: green;
+  background: #ddd;
 }
 
-
-
-
- @media only screen and (max-width:620px  ) {
-
-   .sideNav, #slogan {
-      width:100%;
-    }
-
+/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 700px) {
   .row {
-   flex-direction: column;
- }
-
-   #theGoodButton, #theBadButton, #rickRoll{
-  	display: block;
-  	width: 105%;
-  	border-radius: 0vw;
-  	border: none;
-
+    flex-direction: column;
   }
+}
 
-  #theGoodButton {
-  	text-align: left;
-  	text-indent: 3.5vw;
+/* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
+@media screen and (max-width: 400px) {
+  .navbar a {
+    float: none;
+    width: 100%;
   }
-  #theBadButton{
-  	text-align: middle;
-  }
-  #rickRoll {
-  	text-align: right;
-  }
-
 }
