--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@ body {
 
 }
 
+#theGoodButton:hover, #theBadButton:hover, #rickRoll:hover {
+	background-color: #6DB93A;
+	box-shadow: 7px 8px  rgba(0,0,0,0.15),
+	0 10px 14px 0 rgba(0,0,0,0.19);
+
+}
+
 /* Header/logo Title */
 .header {
   padding: 80px;
@@ -34,14 +41,14 @@ body {
 /* Style the top navigation bar */
 .navbar {
   overflow: hidden;
-  background-color: #333;
+
 }
 
 /* Style the navigation bar links */
 .navbar a {
   float: left;
   display: block;
-  color: white;
+
   text-align: center;
   padding: 14px 20px;
   text-decoration: none;
