--- a/style.css
+++ b/style.css
@@ -10,19 +10,10 @@ body {
 .header {
   padding: 80px;
   text-align: center;
-  background: #1abc9c;
+  background: clear;
   color: white;
 }
 
-/* Increase the font size of the heading */
-.header h1 {
-  font-size: 40px;
-}
-
-/* Style the top navigation bar */
-.navbar {
- background-color: #9BEE60;
-}
 
 /* Style the navigation bar links */
 .navbar, #theGoodButton, #theBadButton, #rickRoll {
