--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
 
 /* Header/logo Title */
 .header {
-  padding: 0px;
+  background-color: #E9FFE1;
   text-align: center;
   background: white;
   color: white;
@@ -89,7 +89,7 @@ body {
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
-  .navbar a {
+  .navbar {
     float: none;
     width: 100%;
   }
