--- a/style.css
+++ b/style.css
@@ -6,7 +6,11 @@ body {
   background-color: #E9FFE1;
 }
 
-
+#ephemeralClock{
+  position: sticky;
+  bottom: 20vw;
+  right: 16vw;
+}
 
 /* Header/logo Title */
 .header {
