--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@ body {
 
 #ephemeralClock{
   position: sticky;
-  bottom: 20vw;
-  right: 16vw;
+  top: 0;
 }
 
 /* Header/logo Title */
@@ -89,7 +88,7 @@ body {
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
-  #ephemeralClock,.row {
+.row {
     flex-direction: column;
   }
 }
