--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ body {
 }
 /* Style the navigation bar links */
 .navbar, #theGoodButton, #theBadButton, #rickRoll {
+  overflow: hidden;
   background-color: #9BEE60;
   float: left;
   display: block;
@@ -39,7 +40,7 @@ body {
 .navbar
   #theGoodButton:hover, #theBadButton:hover, #rickRoll:hover {
   	background-color: #6DB93A;
-  	box-shadow: 7px 8px  rgba(0,0,0,0.15),
+  	box-shadow: 3px 4px  rgba(0,0,0,0.15),
   	0 10px 14px 0 rgba(0,0,0,0.19);
 
   }
@@ -93,7 +94,7 @@ body {
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
-  .navbar {
+  .navbar, #theGoodButton, #theBadButton, #rickRoll {
     float: none;
     width: 100%;
   }
