--- a/style.css
+++ b/style.css
@@ -20,7 +20,8 @@ body {
   color: white;
 }
 /* Style the navigation bar links */
-.navbar #theGoodButton, #theBadButton, #rickRoll {
+.navbar
+#theGoodButton, #theBadButton, #rickRoll {
   overflow: hidden;
   background-color: #9BEE60;
   float: left;
