--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body {
 
 #ephemeralClock{
   position: fixed;
-  top: 0;
   z-index:-1;
+  top: 0;
 }
 
 /* Header/logo Title */
-.header {
+header {
   background-color: #E9FFE1;
   text-align: center;
   background: white;
