--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 .navbar
 #theGoodButton, #theBadButton, #rickRoll {
   overflow: hidden;
-  width: 100vw;
+  width: 100%;
   background-color: #9BEE60;
   float: left;
   text-align: center;
