--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
 .navbar
 #theGoodButton, #theBadButton, #rickRoll {
   overflow: hidden;
+  display: inline;
   width: 100%;
   background-color: #9BEE60;
   float: left;
