--- a/style.css
+++ b/style.css
@@ -36,8 +36,9 @@ body {
   }
 
   .navbar{
+    display: inline-block;
     background-color: #9BEE60;
-    width: 100%;
+    width: 105%;
     padding: 10px 10px;
   }
 
