--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
   }
 
   .navbar{
-      background-color: #9BEE60;
+      background-color: green;
     width: 100px;
     height: 100px;
 
