--- a/style.css
+++ b/style.css
@@ -84,14 +84,14 @@ body {
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 700px) {
-.header, .row {
+ .row {
     flex-direction: column;
   }
 }
 
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
-  .navbar, #theGoodButton, #theBadButton, #rickRoll {
+  .navbar {
     float: none;
     width: 100%;
   }
