--- a/style.css
+++ b/style.css
@@ -26,10 +26,15 @@ body {
 }
 /* Style the navigation bar links */
 
+.navbar {
+  overflow: hidden;
+  background-color: #9BEE60;
+}
+
   .navbar a {
     float: left;
     display: block;
-    background-color: #9BEE60;
+    color: white;
     float: left;
     text-align: center;
     font-style: italic;
