--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 }
 
 /* Header/logo Title */
+/*THESE DON't ALLOW #jdfi99 colors...! What? It litterally breaks them        */
 .header {
   background-color: green;
   text-align: center;
@@ -42,7 +43,6 @@ body {
 
   .navbar a:hover {
     background-color: darkgreen;
-
 }
 
 
