--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .navbar a {
-    padding: 20px 20px;
+    padding: 20px;
     display: block;
     color: white;
     font-style: italic;
@@ -41,7 +41,7 @@ body {
   }
 
   .navbar a:hover {
-    background-color: darkgreen;
+    background-color: green;
 }
 
 
