--- a/style.css
+++ b/style.css
@@ -19,9 +19,8 @@ body {
   width: 65%;
 }
 
-/* Header/logo Title */
 /*THESE DON't ALLOW #jdfi99 colors...! What? It litterally breaks them */
-/* Style the navigation bar links */
+
 
 .navbar {
   overflow: hidden;
@@ -29,7 +28,7 @@ body {
 }
 
 .navbar a {
-    padding: 20px;
+    padding: 20px 25px;
     display: block;
     color: white;
     font-style: italic;
