--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ body {
   -ms-flex: 20%; /* IE10 */
   flex: 20%;
   background-color: #f1f1f1;
+  opacity: 0.5;
   padding: 20px;
 }
 
@@ -62,6 +63,7 @@ body {
   -ms-flex: 60%; /* IE10 */
   flex: 60%;
   background-color: white;
+  opacity: 0.5;
   padding: 20px;
 }
 
