--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 .navbar a {
     padding: 20px 25px;
-    display: block;
+    display: inline-block;
     color: white;
     font-style: italic;
     font-family: 'Courgette';
@@ -42,6 +42,7 @@ body {
 
 /* Column container */
 .row {
+  opacity: 0.5;
   display: -ms-flexbox; /* IE10 */
   display: flex;
   -ms-flex-wrap: wrap; /* IE10 */
