--- a/style.css
+++ b/style.css
@@ -39,10 +39,13 @@ body {
     background-color: green;
 }
 
+#row, #side, #main{
+opacity: 0.5;
+
+}
 
 /* Column container */
 .row {
-  opacity: 0.5;
   display: -ms-flexbox; /* IE10 */
   display: flex;
   -ms-flex-wrap: wrap; /* IE10 */
