--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
 
 .navbar a {
     padding: 20px 25px;
-    display: inline-block;
+    display: block;
     color: white;
     font-style: italic;
     font-family: 'Courgette';
