--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 
 .navbar a {
     padding: 15px 20px;
-    display: block;
+    display: inline;
     color: white;
     font-style: italic;
     font-family: 'Courgette';
