--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 }
 
 div.row, div.side, div.main{
-    opacity: 0.8;
+    opacity: 0.9;
 
 }
 
@@ -53,9 +53,9 @@ div.row, div.side, div.main{
 /* Create two unequal columns that sits next to each other */
 /* Sidebar/left column */
 .side {
-  -ms-flex: 20%; /* IE10 */
-  flex: 20%;
-  background-color: #f1f1f1;
+  -ms-flex: 40%; /* IE10 */
+  flex: 40%;
+  background-color: grey;
   padding: 20px;
 }
 
