--- a/style.css
+++ b/style.css
@@ -15,23 +15,18 @@
   width: 65%;
 }
 
-/*THESE DON't ALLOW #jdfi99 colors...! What? It litterally breaks them */
-
-
 .navbar {
   overflow: hidden;
-  display: inline;
+  display: block;
   background-color: lightgreen;
 }
 
 .navbar a {
     padding: 15px 20px;
-
     color: white;
     font-style: italic;
     font-family: 'Courgette';
   }
-
 
 .navbar a:hover {
     background-color: green;
@@ -39,7 +34,6 @@
 
 div.row, div.side, div.main{
     opacity: 0.9;
-
 }
 
 /* Column container */
@@ -63,7 +57,7 @@ div.row, div.side, div.main{
 .main {
   -ms-flex: 60%; /* IE10 */
   flex: 60%;
-  background-color: white;
+  background-color: lightgreen;
   padding: 20px;
 }
 
@@ -78,7 +72,7 @@ div.row, div.side, div.main{
 .footer {
   padding: 20px;
   text-align: center;
-  background: #ddd;
+  background: darkgrey;
 }
 
 /* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
@@ -92,6 +86,5 @@ div.row, div.side, div.main{
 @media screen and (max-width: 400px) {
   .navbar {
     float: none;
-    
   }
 }
