--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@ html {
 }
 
 .navbar {
-  height: 80%;
-  padding: 40px;
+  width: 100%;
+  padding: 20px;
   border: 10px;
   overflow: hidden;
   display: block;
@@ -32,6 +32,7 @@ html {
 }
 
 .navbar a {
+    width:25%;
     font-size: 24px;
     color: white;
     font-style: italic;
