--- a/style.css
+++ b/style.css
@@ -73,13 +73,20 @@ div.row, div.side, div.main{
   padding: 30px;
 }
 
-/* Fake image, just for this example */
+
 .img {
   width: 100%;
-  padding: 30px;
+  padding: 10px;
+  opacity: 0.9;
 }
 
-/* Footer */
+#Me, #Layla, #Tytoona {
+  width: 100%;
+  padding: 10px;
+  opacity: 0.9;
+}
+
+
 .footer {
   padding: 20px;
   text-align: center;
