--- a/style.css
+++ b/style.css
@@ -55,11 +55,12 @@ html {
 /* Create two unequal columns that stack on top of each other */
 /* Sidebar/left column */
 .side {
+  padding: 40px;
   border-radius: 25px;
+  width: auto;
   -ms-flex: 40%; /* IE10 */
   flex: 40%;
   background-color: rgb(119,136,153,0.6);
-  padding: 30px;
 }
 
 /* Main column */
