--- a/style.css
+++ b/style.css
@@ -55,6 +55,7 @@ html {
 /* Create two unequal columns that stack on top of each other */
 /* Sidebar/left column */
 .side {
+  /*Must have hidden overflow to show the rounded border    */
   overflow: hidden;
   border-collapse: separate;
   border-color: grey;
@@ -63,6 +64,10 @@ html {
   -ms-flex: 40%; /* IE10 */
   flex: 40%;
   background-color: rgb(119,136,153,0.6);
+}
+
+.row + .side {
+  margin-left: 15px;
 }
 
 /* Main column */
