--- a/style.css
+++ b/style.css
@@ -44,41 +44,29 @@ html {
     background-color: green;
 }
 
-/* Column container */
-.row {
-  display: -ms-flexbox; /* IE10 */
-  display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
-  flex-wrap: wrap;
-}
-
 /* Create two unequal columns that stack on top of each other */
 /* Sidebar/left column */
-.side {
+.left {
   /*Must have hidden overflow to show the rounded border    */
   overflow: hidden;
   border-collapse: separate;
   border-color: grey;
   padding: 40px;
   border-radius: 25px;
-  -ms-flex: 40%; /* IE10 */
   flex: 40%;
   background-color: rgb(119,136,153,0.6);
 }
 
-.row + .side {
+.right + .left {
   margin-left: 15px;
 }
 
 /* Main column */
-.main {
+.right {
   border-radius: 25px;
-  -ms-flex: 60%; /* IE10 */
-  flex: 60%;
   background-color: rgb(222,222,222,0.6);
   padding: 30px;
 }
-
 
 .img {
   width: 100%;
@@ -91,13 +79,25 @@ html {
   background: darkgrey;
 }
 
-/* Responsive layout - when the screen is less than 700px wide, make the two columns stack on top of each other instead of next to each other */
-@media screen and (max-width: 700px) {
- .row {
-    flex-direction: column;
-  }
+.mainContainer {
+  display: flex;
+  flex-direction: column;
 }
 
+.left + .right {
+  margin-top: 12px;
+}
+
+@media screen and (min-width: 321px) {
+  .mainContainer {
+    flex-direction: row;
+  }
+
+  .left + .right {
+    margin-top: 0;
+    margin-left: 12px;
+  }
+}
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
   .navbar {
