--- a/style.css
+++ b/style.css
@@ -51,18 +51,19 @@ html {
   overflow: hidden;
   border-collapse: separate;
   border-color: grey;
-  padding: 40px;
-  border-radius: 25px;
+  padding: 30px;
+  border-radius:10vw;
   flex: 40%;
   background-color: rgb(119,136,153,0.6);
 }
 
 .right + .left {
-  margin-left: 15vw;
+  margin-left: 25vw;
 }
 
 /* Main column */
 .right {
+  flex: 60%;
   border-radius: 25px;
   background-color: rgb(222,222,222,0.6);
   padding: 30px;
@@ -85,12 +86,12 @@ html {
 }
 
 .left + .right {
-  margin-top: 12px;
+  margin-top: 10vw;
 }
 
 @media screen and (min-width: 321px) {
   .mainContainer {
-    flex-direction: row;
+    flex-direction: column;
   }
 
   .left + .right {
