--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ html {
 .mainContainer {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
+  flex-direction: row;
 }
 
 @media screen and (min-width: 400px) {
