--- a/style.css
+++ b/style.css
@@ -58,14 +58,13 @@ html {
 }
 
 .right + .left {
-  margin-left: 5vw;
-  margin-right: 5vw;
+margin: 5vw;
 }
 
 /* Main column */
 .right {
   flex: 60%;
-  border-radius: 25px;
+  border-radius: 10vw;
   background-color: rgb(222,222,222,0.6);
   padding: 30px;
 }
@@ -83,13 +82,13 @@ html {
 
 .mainContainer {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 @media screen and (min-width: 400px) {
   .mainContainer {
-    flex-wrap: wrap;
-    flex-direction: column;
+
+    flex-direction: row;
   }
 }
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
