--- a/style.css
+++ b/style.css
@@ -88,8 +88,13 @@ margin-left: 5vw;
 
 @media screen and (min-width: 400px) {
   .mainContainer {
-    flex-direction: column;
-  }
+    flex-direction: row;
+  } 
+
+ .left + .right {
+   margin-top: 0;
+   margin-left: 12px;
+ }
 }
 /* Responsive layout - when the screen is less than 400px wide, make the navigation links stack on top of each other instead of next to each other */
 @media screen and (max-width: 400px) {
