--- a/style.css
+++ b/style.css
@@ -57,12 +57,13 @@ html {
 }
 
 .right + .left {
+   margin-left: 12px;
   margin: 15px;
 }
 
 /* Main column */
 .right {
-  flex: 80%;
+  flex: 40%;
   border-radius: 10vw;
   background-color: rgb(222,222,222,0.6);
   padding: 30px;
