--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ html {
 }
 
 .right + .left {
+  margin-left: 10px;
    margin-bottom: 25px;
 }
 
@@ -81,9 +82,7 @@ html {
 }
 
 .mainContainer {
-  margin:0 auto;
   display: flex;
-  flex-direction: row;
 }
 
 @media screen and (min-width: 400px) {
