--- a/style.css
+++ b/style.css
@@ -57,13 +57,13 @@ html {
 }
 
 .right + .left {
+  margin-right: 25px;
   margin-left: 10px;
-   margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 /* Main column */
 .right {
-  margin: 15px;
   flex: 40%;
   border-radius: 10vw;
   background-color: rgb(222,222,222,0.6);
@@ -83,6 +83,7 @@ html {
 
 .mainContainer {
   display: flex;
+  flex-direction: row;
 }
 
 @media screen and (min-width: 400px) {
