--- a/style.css
+++ b/style.css
@@ -57,6 +57,8 @@ html {
 }
 
 .right + .left {
+  max-width: 30%;
+  margin-top: 5vw;
   margin-right: 5vw;
   margin-left: 5vw;
   margin-bottom: 5vw;;
