--- a/style.css
+++ b/style.css
@@ -52,7 +52,6 @@ html {
   border-color: grey;
   padding: 30px;
   border-radius:10vw;
-  flex: 30%;
   background-color: rgb(119,136,153,0.6);
 }
 
@@ -66,7 +65,6 @@ html {
 
 /* Main column */
 .right {
-  flex: 30%;
   border-radius: 5vw;
   background-color: rgb(222,222,222,0.6);
   padding: 30px;
@@ -87,6 +85,7 @@ html {
 .mainContainer {
   display: flex;
   flex-direction: row;
+  flex: 1 1 25%;
 }
 
 @media screen and (min-width: 400px) {
