--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@ A {
   text-decoration: none;
 }
 
+
+section {
+    height: 100px;
+    width: 100px;
+}
+
 #mainBox {
   display: flex;
   width: 100%;
@@ -58,20 +64,36 @@ A {
 }
 
 .rightColumn, .leftColumn {
-  font-family: 'Amiri', serif;
-  background: rgba(255,255,255, 0.9);
-  font-size: 22px;
-  align-items: center;
-  min-width: 50px;
-  padding: 10px;
-  width: 45%;
-  margin: 0 25px;
-  border-radius: 5vw;
+    font-family: 'Amiri', serif;
+    background: rgba(110, 130, 80, 0.1);
+    font-size: 3vh;
+    align-items: center;
+    min-width: 50px;
+    padding: 10px;
+    width: 45%;
+    margin: 0 25px;
+    border-radius: 5vw;
 }
 
 
-.img {
-  width: 100%;
+#resize {
+    border: 10px;
+    padding: 2px;
+    height: 10px;
+    width: 100%;
+    overflow:hidden;
+}
+
+
+p {
+    text-align:left;
+
+
+}
+
+img {
+  width: 60%;
+  height:  28%;
 }
 
 .footer {
@@ -94,15 +116,23 @@ h2{
 
 
 /* Responsive layout - when the screen is less than 500px wide, make the navigation links stack on top of each other instead of next to each other */
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
   #mainBox {
     display: flex;
     flex-wrap: wrap;
   }
   .rightColumn, .leftColumn {
     width: 100%;
-    background: rgba(110, 130, 80, 0.1)
+  
   }
+  img{
+      width: 100%;
+      height: 40vh;
+      padding-bottom: 2%;
+  }
+ .navbar a {
+        font-size: 5vw;
+    }
 
   .navbar {
     float: none;
